# reMITM

./: .eslintrc.json  .gitignore  .prettierignore  README.md  index.html  package.json  tsconfig.json  types.d.ts  vite.config.ts
.github/workflows/: backend-checks.yml  build.yml
src/: app.css  app.tsx  logs.css  logs.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/lang/: README.md  de.json  en.json  es.json  jp.json  pt-br.json
src-tauri/src/: certificate.rs  cli.rs  config.rs  lang.rs  log.rs  main.rs  matcher.rs  proxy.rs  system.rs  tools.rs
src/components/: BottomControls.css  BottomControls.tsx  Configuration.css  Configuration.tsx  Footer.css  Footer.tsx  OnOff.css  OnOff.tsx  RedirectSelect.css  RedirectSelect.tsx  Textbox.css  Textbox.tsx  TopControls.css  TopControls.tsx  UriList.css  UriList.tsx
src/components/Common/: Checkbox.css  Checkbox.tsx  DirTextbox.css  DirTextbox.tsx  Textbox.css  Textbox.tsx
src/components/Logs/: LogRow.css  LogRow.tsx
src/components/Translation/: Translate.tsx
