[package]
name = "app"
version = "0.6.0"
description = "Selective MITM proxy"
authors = ["SpikeHD"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[profile.release]
lto = true
strip = "debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "process-exit", "process-relaunch", "dialog-message", "dialog-open"] }
dirs = "5.0.1"
hudsucker = "0.20.0"
rcgen = "0.11.1"
rustls-pemfile = "1.0.2"
once_cell = "1.18.0"
async-trait = "0.1.68"
tokio = { version = "1.28.2", features = ["signal"] }
registry = "1.2.3"
is_elevated = "0.1.2"
open = "5.0.0"
colored = "2.0.0"
chrono = "0.4.26"
rand = "0.8.5"

clap = { version = "4.3.21", features = ["derive"] }
ctrlc = "3.4.0"
include_dir = { version = "0.7.3" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
